--- a/about us.html
+++ b/about us.html
@@ -21,12 +21,12 @@
           <ul class="nav-links">
               <li><a href="./index.html" class="active">Home</a></li>
               <li><a href="./poem-details.html">Poems</a></li>
-              <li><a href="/about us.html">About</a></li>
+              <li><a href="./about us.html">About</a></li>
               <li><a href="./FAQs.html">FAQs</a></li>
           </ul>
           <div class="search-menu">
-              <input type="text" placeholder="Search">
-              <button class="search-btn"><i class="fa fa-search"></i></button>
+            <a href="./Main Page/login.html" class="btn-login">Log In</a>
+            <a href="./Main Page/signup.html" class="btn-signup">Sign Up</a>
               <button class="menu-btn"><i class="fa fa-bars"></i></button>
           </div>
       </div>
@@ -36,14 +36,10 @@
   <div class="container">
     <div class="row g-5">
       <div class="col-md-8">
-        <!-- <h3 class="pb-4 mb-4 fw-bold border-bottom"> -->
-            <!-- Featured Poem
-        </h3> -->
 
   <div class="poem-feature">
     <div class="poem-text">
         <h2 style="font-weight: bold;">Dearest,</h2>
-        <!-- <p>cornelius</p> -->
         <p>
             Everyone has a funny story to tell about someone whose name starts with J <br>
             <br>
@@ -71,9 +67,11 @@
           
           </div>
     </div>
-
+     <div style="margin-top: 20px;">
+        <a href="./index.html" class="back-home-btn">Back Home</a>
+    </div>
 <section>
-    <!-- Footer -->
+
     <footer class="footer">
       <div class="footer-container">
           <div class="footer-logo">
