--- a/Main Page/login.html
+++ b/Main Page/login.html
@@ -1,43 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Main Page</title>
-  <link rel="stylesheet" href="./login.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login Page</title>
+    <link rel="stylesheet" href="./signup.css">
 </head>
 <body>
 
-  <div class="login-container">
+  <div class="signup">
     <a href="/index.html" class="skip">Skip</a>
-    <!-- Left Section: Login Form -->
-    <div class="login-form">
-      <h1>Welcome Back!</h1>
-      <p>Take in the exquisite beauty of language and investigate the wide range of human emotions.</p>
-
-      <form action="#" method="post">
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required>
-
-        <a href="#" class="forgot-password">Forgot your Password?</a>
-
-        <button type="submit" class="btn">Log In</button>
-      </form>
-
-      <p class="signup-text">Don’t have an account yet? <a href="/Main Page/signup.html">Sign Up</a></p>
+    <div class="left-side">
+        <div class="profile">
+            <img src="/Assets/LOGO.jpeg" alt="Profile Image">
+            <p class="name">saro</p>
+        </div>
     </div>
 
-    <div class="profile-section">
-      <div class="profile">
-        <img src="/Assets/LOGO.jpeg" alt="Profile Image">
-      </div>
-      <p class="username">saro</p>
-      <!-- <p class="tagline">Every page that I wrote, you were on it</p> -->
+    <div class="right-side">
+        <div class="form-container">
+            <h1>Welcome Back!</h1>
+            <p class="description">Take in the exquisite beauty of language and investigate the wide range of human emotions.</p>
+            <form>
+              <label for="email">Email:</label>
+              <input type="email" id="email" name="email" required>
+      
+              <label for="password">Password:</label>
+              <input type="password" id="password" name="password" required>
+
+                <a href="#" class="forgot-password">Forgot your Password?</a>
+
+                <button type="submit" class="signup-button">Log In</button>
+
+                <p class="login-redirect">Don’t have an account yet? <a href="/Main Page/signup.html">Sign Up</a></p>
+            </form>
+        </div>
     </div>
-  </div>
+</div>
 
 </body>
 </html>
