--- a/poem-a-haibun.html
+++ b/poem-a-haibun.html
@@ -25,8 +25,8 @@
               <li><a href="./FAQs.html">FAQs</a></li>
           </ul>
           <div class="search-menu">
-              <input type="text" placeholder="Search">
-              <button class="search-btn"><i class="fa fa-search"></i></button>
+            <a href="./Main Page/login.html" class="btn-login">Log In</a>
+            <a href="./Main Page/signup.html" class="btn-signup">Sign Up</a>
               <button class="menu-btn"><i class="fa fa-bars"></i></button>
           </div>
       </div>
